--- a/docs/locale/zh_CN/LC_MESSAGES/sphinx.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/sphinx.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2021, Tiled Documentation Writers
 # This file is distributed under the same license as the Tiled package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
@@ -13,21 +13,28 @@ msgstr ""
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.11.0\n"
 
-#: ../../index.rst:10
-msgid "User Manual"
+#: ../../_templates/layout.html:61
+#, python-format
+msgid "Search within %(docstitle)s"
 msgstr ""
 
-#: ../../index.rst:32
-msgid "Reference"
+#: ../../_templates/layout.html:83
+msgid "About these documents"
 msgstr ""
 
-#: ../../index.rst:2
-msgid "Tiled Documentation"
+#: ../../_templates/layout.html:86
+msgid "Index"
 msgstr ""
 
-#: ../../index.rst:6
-msgid "If you're not finding what you're looking for on these pages, please don't hesitate to ask questions on the `Tiled Forum <https://discourse.mapeditor.org>`_ or the `Tiled Discord <https://discord.gg/39wbTv7>`_."
+#: ../../_templates/layout.html:89
+msgid "Search"
 msgstr ""
+
+#: ../../_templates/layout.html:92
+msgid "Copyright"
+msgstr ""
+
